syntax = "proto3";

package rivet.backend.pkg.module.instance_get;

import "proto/common.proto";
import "proto/backend/module.proto";

message Request {
	repeated rivet.common.Uuid instance_ids = 1;
}

message Response {
	repeated rivet.backend.module.Instance instances = 1;
}
